# en-ru-translator

./: .gitignore  LICENSE.txt  README.en.md  README.md  README.ru.md  pyproject.toml
src/en_ru_translator/: __init__.py  translator.py
src/en_ru_translator/internal/: __init__.py  cache.py  sentencizer.py  utils.py
