[project]
name = "en-ru-translator"
version = "1.0.0"
description = "A simple tool for translating text from English to Russian using a MarianMT-based model."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=5.0.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.0",
    "huggingface_hub>=1.9.0",
    "httpx>=0.28.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
